adicionado novas rotas e metodos
